--- a/equibot/policies/configs/close_mobile_dp.yaml
+++ b/equibot/policies/configs/close_mobile_dp.yaml
@@ -5,7 +5,7 @@ env:
   env_class: close
   args:
     max_episode_length: 100
-    cam_resolution: 256
+    cam_resolution: 512 # 256
     vis: true
     freq: 5
     ac_noise: 0.0
