--- a/equibot/policies/configs/fold_mobile_equibot.yaml
+++ b/equibot/policies/configs/fold_mobile_equibot.yaml
@@ -5,5 +5,9 @@ agent:
   agent_name: equibot
 
 model:
+  hidden_dim: 4 # was 32
   encoder:
     backbone_type: vn_pointnet
+    
+training:
+  batch_size: 1024  # 1024 for equibot on rtx a4500 20gb vram 480p dataset 
