--- a/equibot/policies/configs/close_mobile_equibot.yaml
+++ b/equibot/policies/configs/close_mobile_equibot.yaml
@@ -5,8 +5,6 @@ agent:
   agent_name: equibot
 
 model:
+  hidden_dim: 8 # was 32
   encoder:
     backbone_type: vn_pointnet
-
-# training:
-#   batch_size: 128  # 128 for equibot on rtx a4500 20gb vram 480p dataset
