preprocess + train + eval scripts + hydra conf

--- a/equibot/policies/configs/franka_base.yaml
+++ b/equibot/policies/configs/franka_base.yaml
@@ -65,8 +65,8 @@ model:
     clip_sample: true
     prediction_type: epsilon
   obs_horizon: 2
-  ac_horizon: 8
-  pred_horizon: 16
+  ac_horizon: 2
+  pred_horizon: 64
   encoder:
     c_dim: ${model.hidden_dim}
     backbone_type: vn_pointnet
@@ -77,7 +77,7 @@ model:
       knn: 8
   obs_mode: ${env.args.obs_mode}
   ac_mode: ${env.args.ac_mode}
-  use_torch_compile: True # was false
+  use_torch_compile: false # was false
 
 training:
   batch_size: 6144 # for og dp on rtx a4500 20gb vram 480p dataset, was 32 originally
@@ -102,3 +102,13 @@ hydra:
 wandb:
   entity: ab36
   project: equibot
+
+franka_rope:
+  physics_dt: 1.0/60.0
+  rendering_dt: 1.0/60.0
+  _randomize: False
+  _randomize_on_reset: False
+  extra_scenes: null #[fixed_cylinder] # list, possible values: fixed_cylinder, visual_line
+  _rope_damping: 0.6
+  _rope_stiffness: 0.1
+  seed: 42
