add rope length to yaml

--- a/equibot/policies/configs/franka_base.yaml
+++ b/equibot/policies/configs/franka_base.yaml
@@ -133,6 +133,7 @@ franka_rope:
   _randomize: True
   _randomize_on_reset: False
   extra_scenes: null #null #[fixed_cylinder] # list, possible values: fixed_cylinder, visual_line
+  _ropeLength: 0.8
   _rope_damping: 0.6
   _rope_stiffness: 0.1
   from_demo: r"C:\Users\Shadow\project\franka_rope\demos\test_straighten_right\output_data_2024-12-02_15-38-13.json"
