--- a/equibot/policies/configs/franka_base.yaml
+++ b/equibot/policies/configs/franka_base.yaml
@@ -35,7 +35,7 @@ data:
   dataset:
     num_training_steps: ???
     path: null
-    num_points: 44
+    num_points: 35
     num_augment: 0
     same_aug_per_sample: true
     aug_keep_original: true
@@ -101,7 +101,7 @@ model:
       knn: 8
   obs_mode: ${env.args.obs_mode}
   ac_mode: ${env.args.ac_mode}
-  use_torch_compile: True # was false
+  use_torch_compile: False # was false
 
 training:
   batch_size: 1024 # 15gb # for og dp on rtx a4500 20gb vram 480p dataset, was 32 originally
@@ -128,8 +128,8 @@ wandb:
   project: equibot
 
 franka_rope:
-  physics_dt: 1.0/60.0
-  rendering_dt: 1.0/60.0
+  physics_dt: 1.0/30.0
+  rendering_dt: 1.0/30.0
   _randomize: True
   _randomize_on_reset: False
   extra_scenes: null #null #[fixed_cylinder] # list, possible values: fixed_cylinder, visual_line
@@ -140,3 +140,8 @@ franka_rope:
   start_time: 350
   manually_close: False
   seed: 42
+  rel: True
+  preprocess:
+    input_dir: r"C:\Users\Shadow\project\franka_rope\demos\02_train"
+    output_dir: r"C:\Users\Shadow\project\franka_data\tmp"
+    rel: ${franka_rope.rel}
