video recording + log filenname to wandb

--- a/equibot/policies/configs/franka_base.yaml
+++ b/equibot/policies/configs/franka_base.yaml
@@ -152,6 +152,8 @@ franka_rope:
   seed: 42
   rel: True
   rpy: False
+  cap: null # delta pos per seconds, depends on fps, # 0.1
+  cup: null # min speed
   update_ori: True
   preprocess:
     input_dir: r"C:\Users\Shadow\project\franka_rope\demos\02_train"
