runnable but bad results

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ outputs/*
 .vs/VSWorkspaceState.json
 .vs/equibot_for_franka_rope/v17/DocumentLayout.json
 .vs/equibot_for_franka_rope/v17/.wsuo
+franka_rope.py
